fixed page width overflow

--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -259,7 +259,7 @@
 
 @media screen and (max-width: 768px) {
     .home {
-        padding: 80px 0 40px;
+        padding: 0px 0 0px;
     }
     .greeting {
         font-size: 1.3rem;
